<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<artifactId>org.coreasm.engine</artifactId>
	<packaging>jar</packaging>
	<name>CoreASM Engine</name>

	<parent>
		<artifactId>org.coreasm.parent</artifactId>
		<groupId>org.coreasm</groupId>
		<version>1.7.3-locke-SNAPSHOT</version>
		<relativePath>../org.coreasm.parent</relativePath>
	</parent>

	<properties>
		<skipTests>true</skipTests>
	</properties>

	<build>
		<resources>
			<resource>
				<directory>src</directory>
				<includes>
					<include>org/coreasm/engine/absstorage/*.*</include>
				</includes>
			</resource>

			<resource>
				<directory>src</directory>
				<includes>
					<include>org/coreasm/engine/EngineError.java</include>
					<include>org/coreasm/engine/EngineException.java</include>
					<include>org/coreasm/engine/scheduler/SchedulingPolicy.java</include>
					<include>org/coreasm/engine/interpreter/InitAgent.java</include>
				</includes>
			</resource>

			<resource>
				<directory>src</directory>
				<includes>
					<include>CompilerRuntime/*.*</include>
				</includes>
			</resource>
			<resource>
				<directory>src</directory>
				<includes>
					<include>org/coreasm/compiler/plugins/**/include/*.*</include>
				</includes>
			</resource>
			<resource>
				<directory>src</directory>
				<includes>
					<include>org/coreasm/engine/plugins/**/*.*</include>
				</includes>
			</resource>
			<resource>
				<directory>rsc</directory>
			</resource>
		</resources>

		<plugins>

			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-surefire-plugin</artifactId>
				<version>2.16</version>
				<configuration>
					<skipTests>${skipTests}</skipTests>
					<reuseForks>false</reuseForks>
					<forkCount>0</forkCount>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-assembly-plugin</artifactId>
				<version>2.4</version>
				<configuration>
					<descriptorRefs>
						<descriptorRef>jar-with-dependencies</descriptorRef>
					</descriptorRefs>
				</configuration>
				<executions>
					<execution>
						<id>CoreASM Engine Lib</id>
						<phase>package</phase>
						<goals>
							<goal>single</goal>
						</goals>
						<configuration>
							<appendAssemblyId>false</appendAssemblyId>
							<finalName>org.coreasm.engine-library</finalName>
						</configuration>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<artifactId>maven-jar-plugin</artifactId>
				<version>2.4</version>
				<executions>
					<execution>
						<goals>
							<goal>test-jar</goal>
						</goals>
					</execution>
				</executions>
			</plugin>

			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.8.0</version>
				<configuration>
					<source>1.8</source>
					<target>1.8</target>
					<useIncrementalCompilation>false</useIncrementalCompilation>
				</configuration>
			</plugin>

		</plugins>
	</build>

	<dependencies>
		<dependency>
			<groupId>jgraph</groupId>
			<artifactId>jgraph</artifactId>
			<version>5.13.0.0</version>
		</dependency>
		<dependency>
			<groupId>net.sf.jgrapht</groupId>
			<artifactId>jgrapht</artifactId>
			<version>0.8.3</version>
		</dependency>
		<dependency>
			<groupId>org.jparsec</groupId>
			<artifactId>jparsec</artifactId>
			<version>3.1</version>
		</dependency>
		<dependency>
			<groupId>junit</groupId>
			<artifactId>junit</artifactId>
			<version>4.12</version>
		</dependency>
		<dependency>
			<groupId>org.coreasm</groupId>
			<artifactId>org.coreasm.util</artifactId>
			<version>1.7.3-locke-SNAPSHOT</version>
		</dependency>
	</dependencies>
</project>
